
    AVRO-1241. Java: Optimize Trevni string input. (Joseph Adler via cutting)

    AVRO-1198. Java: Improve error message for malformed data. (cutting)

    AVRO-1252. Java: Add a '-string' option to compiler command line
    to cause java.lang.String to be used instead of Utf8. (cutting)

    AVRO-1255. Python: Make 'names' parameter optional in to_json methods.
    (Jeremy Kahn via cutting)

  BUG FIXES

    AVRO-1231. Java: Fix Trevni shredder to work on non-recursive
    schemas with multiple references. (Mark Wagner via cutting)

    AVRO-1230. avro-mapred-1.7.3-hadoop1.jar does not work with
    Hadoop 1. (tomwhite)

    AVRO-1233. Java: Fix InputBuffer's constructor to use the
    specified initial position. (Mark Wagner via cutting)

    AVRO-1227. Java: Large ByteBuffers can corrupt output. (cutting)

    AVRO-1228. Java: Fix Trevni to use default values for missing Avro fields.
    (cutting)

    AVRO-1240. Java: Fix SpecificDatumReader(Class) constructor to use
    correct ClassLoader. (cutting)

    AVRO-1242. Java: Fix AvroTrevniOutputFormat to correctly get file
    metadata from JobConf. (Ted Malaska via cutting)

    AVRO-1220. Java: Fix a deadlock when reading by replacing parser
    symbol constructors with factory methods. (cutting)

    AVRO-1249. Java: Fix DataFileWriter#close() to not throw an
    exception when called twice.  (E. Sammer via cutting)

    AVRO-1247. Java: Fix Requestor and Responder implementations to
    use correct ClassLoader. (cutting)

Avro 1.7.3 (6 December 2012)

  NEW FEATURES

    AVRO-485.  JavaScript: Add validator. (Quinn Slack via cutting) 

    AVRO-1157. Java: Extend schema and protocol property support from
    string-only to full JSON. (cutting)

    AVRO-1186. Java: Extend specific compiler to emit Java annotations
    on interfaces, classes, fields and methods for the property
    "javaAnnotation".  The value of the property may either be a
    string or a JSON array of strings in order to emit multiple